# fractol_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: doxygen.conf
include/: canvas.hpp  fractol.hpp  key_map.hpp  painter.hpp  resource_manager.hpp  sdl_event_handler.hpp  sdl_window.hpp  windows_manager.hpp
include/controllers/: algebraic_fractal.hpp  mandelfract.hpp  menu.hpp  pythagoras_tree_fractal.hpp
include/event/: keyboard_event.hpp  mouse_button_event.hpp  mouse_motion_event.hpp  mouse_wheel_event.hpp  quit_event.hpp  window_event.hpp  window_event_moved.hpp  window_event_resized.hpp  window_moved_event.hpp  window_resized_event.hpp
include/interface/: event.hpp  event_handler.hpp  painter.hpp  resource.hpp  view.hpp  window.hpp
include/models/: algebraic_fractal.hpp  burningshipfract.hpp  juliafract.hpp  mandelfract.hpp  menu.hpp  pythagoras_tree_fractal.hpp
include/views/: algebraic_fractal.hpp  mandelfract.hpp  menu.hpp  pythagoras_tree_fractal.hpp
libcl++/: CMakeLists.txt
libcl++/include/: clpp_core.hpp  clpp_exception.hpp  clpp_shader.hpp
libcl++/include/clpp/: core.hpp  device.hpp  platform.hpp  shader.hpp
libcl++/source/: clpp_core.cpp  clpp_shader.cpp  core.cpp  device.cpp  platform.cpp  shader.cpp
libcl++/source/template/: clpp_shader.tpp
libcl++/source/template/clpp/: shader.tpp
libzzgraph/: CMakeLists.txt
libzzgraph/include/: font_resource.hpp  key_map.hpp  painter.hpp  sdl_event_handler.hpp  sdl_utilities.hpp  sdl_window.hpp
libzzgraph/include/event/: keyboard_event.hpp  mouse_motion_event.hpp  mouse_wheel_event.hpp  window_event.hpp  window_moved_event.hpp  window_resized_event.hpp
libzzgraph/include/interface/: event.hpp  event_handler.hpp  window.hpp
libzzgraph/source/: canvas.cpp  painter.cpp  resource_manager.cpp  sdl_event_handler.cpp  sdl_utilities.cpp  sdl_window.cpp
libzzgraph/source/event/: event.cpp  mouse_button_event.cpp  mouse_motion_event.cpp
libzzgui/: CMakeLists.txt
libzzgui/include/: canvas.hpp  controllers_manager.hpp  font_resource.hpp  key_map.hpp  painter.hpp  resource_manager.hpp  resources_manager.hpp  sdl_application.hpp  sdl_event_handler.hpp  sdl_utilities.hpp  sdl_window.hpp  widgets_manager.hpp  windows_manager.hpp
libzzgui/include/abstract/: application.hpp  base_controller.hpp  base_model.hpp  base_view.hpp  controller.hpp  event.hpp  event_handler.hpp  model.hpp  resource.hpp  view.hpp  widget.hpp  window.hpp
libzzgui/include/event/: keyboard_event.hpp  mouse_button_event.hpp  mouse_motion_event.hpp  mouse_wheel_event.hpp  quit_event.hpp  window_event.hpp  window_moved_event.hpp  window_resized_event.hpp
libzzgui/include/interfaces/: application.hpp  base_controller.hpp  base_view.hpp  controller.hpp  event.hpp  event_handler.hpp  model.hpp  resource.hpp  view.hpp  widget.hpp  window.hpp
libzzgui/include/resources/: image_resource.hpp
libzzgui/include/template/: controller.tpp  model.tpp
libzzgui/include/widgets/: button.hpp  image.hpp  label.hpp  select.hpp
libzzgui/source/: application.cpp  canvas.cpp  controller.cpp  controllers_manager.cpp  event_handler.cpp  font_resource.cpp  model.cpp  painter.cpp  resource.cpp  resource_manager.cpp  resources_manager.cpp  sdl_application.cpp  sdl_event_handler.cpp  sdl_utilities.cpp  sdl_window.cpp  view.cpp  widgets_manager.cpp  window.cpp  windows_manager.cpp
libzzgui/source/event/: event.cpp  keyboard_event.cpp  mouse_button_event.cpp  mouse_motion_event.cpp  mouse_wheel_event.cpp  quit_event.cpp  window_moved_event.cpp  window_resized_event.cpp
libzzgui/source/resources/: font_resource.cpp  image_resource.cpp
libzzgui/source/template/: controller.tpp  event_handler.tpp  model.tpp  resource_manager.tpp  resources_manager.tpp  view.tpp  widgets_manager.tpp  windows_manager.tpp
libzzgui/source/template/widgets/: select.tpp
libzzgui/source/widgets/: button.cpp  image.cpp  label.cpp  select.cpp  widget.cpp
resources/shaders/: burningship.cl  common.h  julia.cl  mandelbrot.cl  mandelfract.cl  utils.cl
source/: canvas.cpp  event_handler.cpp  font_resource.cpp  fractol.cpp  main.cpp  painter.cpp  resource.cpp  sdl_event_handler.cpp  sdl_window.cpp  window.cpp  windows_manager.cpp
source/controllers/: algebraic_fractal.cpp  mandelfract.cpp  menu.cpp  pythagoras_tree_fractal.cpp
source/event/: keyboard_event.cpp  mouse_button_event.cpp  mouse_motion_event.cpp  mouse_wheel_event.cpp  quit_event.cpp  window_event.cpp  window_event_moved.cpp  window_event_resized.cpp  window_moved_event.cpp  window_resized_event.cpp
source/models/: algebraic_fractal.cpp  burningshipfract.cpp  juliafract.cpp  mandelfract.cpp  menu.cpp  pythagoras_tree_fractal.cpp
source/views/: algebraic_fractal.cpp  mandelfract.cpp  menu.cpp  pythagoras_tree_fractal.cpp
